@@ -1,3 +1,5 @@
+#---------------------------------- 0.30.4 -----------------------------------
+[fixed] bugs related to executing inline tasks
 #---------------------------------- 0.30.3 -----------------------------------
 [fixed] one line change because Josiah wasn't paying attention
 #---------------------------------- 0.30.2 -----------------------------------
